[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycheckpoint"
authors = [
  { name="Yurun Yuan", email="yurun.yuan@outlook.com" },
]
version = "0.0.1"
description = "A simple tool that automate checkpointing. "
readme = "README.md"
dependencies = [
    "pandas",
    'python_version>"3.7"',
]
[project.urls]
Homepage = "https://github.com/yurun-yuan/pycheckpoint"
Issues = "https://github.com/yurun-yuan/pycheckpoint/issues"