[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pychequepoint"
authors = [
  { name="Yurun Yuan", email="yurun.yuan@outlook.com" },
]
version = "0.0.2"
description = "A simple tool that automate checkpointing. "
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas"
]
[project.urls]
Homepage = "https://github.com/yurun-yuan/pycheckpoint"
Issues = "https://github.com/yurun-yuan/pycheckpoint/issues"